--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size">22sp</dimen>
-    <dimen name="corner_radius">15sp</dimen>
+    <dimen name="corner_radius">15dp</dimen>
     <dimen name="layout_zero">0dp</dimen>
-    <dimen name="layout_top">10dp</dimen>
-    <dimen name="weight_one">1</dimen>
+    <dimen name="top_switch">10dp</dimen>
+    <dimen name="weight_one">1dp</dimen>
     <dimen name="margin_size">16dp</dimen>
     <dimen name="margin">64dp</dimen>
     <dimen name="margin_top">42dp</dimen>
     <dimen name="margin_two">43dp</dimen>
-    <dimen name="layout_marginStart">5dp</dimen>
+    <dimen name="margin_start">5dp</dimen>
     <dimen name="top">14dp</dimen>
     <dimen name="layout_margin">42dp</dimen>
-    <dimen name="layout_start">64</dimen>
+    <dimen name="height_view">61dp</dimen>
+    <dimen name="padding_start">16dp</dimen>
+    <dimen name="padding_top">13dp</dimen>
+    <dimen name="margin_top_view">80dp</dimen>
+    <dimen name="top_view_button">141dp</dimen>
+    <dimen name="top_view">202dp</dimen>
+    <dimen name="layout_margin_top">263dp</dimen>
+    <dimen name="layout_height">36dp</dimen>
+    <dimen name="top_margin">8dp</dimen>
+    <dimen name="drawable_padding">9dp</dimen>
+    <dimen name="width_text">56dp</dimen>
+    <dimen name="margin_end">6dp</dimen>
+    <dimen name="height">61dp</dimen>
+    <dimen name="padding_top_view">21dp</dimen>
+    <dimen name="margin_start_button">324dp</dimen>
+    <dimen name="margin_top_button">19dp</dimen>
+    <dimen name="layout_margin_button">12dp</dimen>
+    <dimen name="layout_width_button">24dp</dimen>
+    <dimen name="layout_width">48dp</dimen>
+    <dimen name="layout_margin_start">4dp</dimen>
+    <dimen name="height_frame">52dp</dimen>
+    <dimen name="padding">20dp</dimen>
+    <dimen name="margin_layout">4dp</dimen>
+    <dimen name="height_layout">40dp</dimen>
+    <dimen name="start">298dp</dimen>
+    <dimen name="end">6dp</dimen>
+    <dimen name="top_search">8dp</dimen>
+    <dimen name="width_clear">40dp</dimen>
 </resources>
