--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,6 +22,7 @@
         tools:ignore="MissingConstraints,RtlSymmetry"  />
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_frame"
         android:layout_marginTop="@dimen/width_text"
@@ -32,23 +33,31 @@
         <EditText
             android:id="@+id/inputEditText"
             style="@style/EditTextStyle"
-            android:drawablePadding="@dimen/drawable_padding"
-            android:layout_marginTop="@dimen/top_search"
             android:layout_marginLeft="@dimen/margin_size"
+            android:layout_marginTop="@dimen/top_search"
             android:layout_marginRight="@dimen/margin_size"
+            android:drawablePadding="@dimen/drawable_padding"
             android:paddingStart="@dimen/corner_radius"
             tools:ignore="RtlSymmetry" />
 
         <ImageView
             android:id="@+id/clearIcon"
             style="@style/ClearButtonStyle"
-            android:layout_marginEnd="@dimen/layout_margin_button"
-            android:layout_marginTop="@dimen/margin_clear"
             android:layout_gravity="right"
+            android:layout_marginTop="@dimen/margin_clear"
+            android:layout_marginEnd="@dimen/layout_margin_button"
             app:layout_constraintBottom_toBottomOf="@+id/inputEditText"
             app:layout_constraintEnd_toEndOf="@+id/inputEditText"
             app:layout_constraintTop_toTopOf="@+id/inputEditText"
             tools:ignore="MissingConstraints,RtlHardcoded" />
     </FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerTrack"
+        android:layout_width="409dp"
+        android:layout_height="781dp"
+        android:layout_marginTop="124dp"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
