--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         tools:ignore="MissingConstraints,RtlSymmetry"  />
 
     <FrameLayout
-        android:id="@+id/frameLayout2"
+        android:id="@+id/frameSearch"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_frame"
         android:layout_marginTop="@dimen/width_text"
@@ -54,10 +54,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerTrack"
-        android:layout_width="409dp"
-        android:layout_height="781dp"
-        android:layout_marginTop="124dp"
-        app:layout_constraintTop_toTopOf="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/layout_zero"
+        android:layout_marginTop="@dimen/margin_recycler"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
