--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="stroke">#33FFFFFF</color>
     <color name="droid">#44000000</color>
     <color name="non">#FFFFFF</color>
+    <color name="yellow">#FCD452</color>
 </resources>
