--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,18 @@
         <item name="cornerRadius">@dimen/margin_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
+    <style name="ButtonProblem" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/black_blue</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/text_button</item>
+        <item name="android:letterSpacing">-0.05</item>
+        <item name="android:layout_width">@dimen/button_width</item>
+        <item name="android:layout_height">@dimen/layout_height</item>
+        <item name="iconPadding">@dimen/top_switch</item>
+        <item name="cornerRadius">@dimen/width_text</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
     <style name="BackGround">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -135,5 +147,29 @@
         <item name="android:layout_width">@dimen/padding_top</item>
         <item name="android:layout_height">@dimen/padding_top</item>
         <item name="srcCompat">@drawable/separator</item>
+    </style>
+    <style name="problemRight">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="srcCompat">@drawable/note</item>
+    </style>
+    <style name="problemLeft">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="srcCompat">@drawable/noteright</item>
+    </style>
+    <style name="textProblem">
+        <item name="android:layout_width">@dimen/problem_width</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/wifi</item>
+        <item name="android:textSize">@dimen/text_problem</item>
+        <item name="android:textColor">@color/black_blue</item>
+    </style>
+    <style name="textNothing">
+        <item name="android:layout_width">@dimen/problem_width</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/nothing</item>
+        <item name="android:textSize">@dimen/text_problem</item>
+        <item name="android:textColor">@color/black_blue</item>
     </style>
 </resources>
